# GLORYxR

./: .gitignore  .gitmodules  ApplyRulesExperiment.ipynb  Example.ipynb  README.md  TrainModels.ipynb  evaluate.ipynb  predict_metabolites.py  process_reference_data.py  process_test_data.py  pyproject.toml  sandbox.ipynb
.github/workflows/: build.yml  check.yml  docs.yml
GLORYx_data/reference/: gloryx_reference_dataset_metabolites_exploded.csv
GLORYx_data/test/: gloryx_test_dataset.sdf  gloryx_test_dataset_metabolites_exploded.csv  gloryx_test_dataset_metabolites_exploded.sdf
GLORYx_data/test/debug_results/: metabolite_predictions.csv
GLORYx_data/test/results/: failed_molecules.csv  metabolite_predictions.csv
GLORYx_data/test/results_loose/: metabolite_predictions.csv
GLORYx_data/test/results_strict/: metabolite_predictions.csv
datasets/: process_reference_data.py  process_test_data.py
datasets/GLORYx_data/reference/: gloryx_reference_dataset.sdf
datasets/GLORYx_data/test/: gloryx_test_dataset.json  gloryx_test_dataset.sdf  gloryx_test_dataset_metabolites_exploded.csv
datasets/GLORYx_data/test/results_loose_priority/: metabolite_predictions.csv
datasets/GLORYx_data/test/results_loose_priority_corrected/: metabolite_predictions.csv
datasets/GLORYx_data/test/results_strict/: metabolite_predictions.csv
docs/: conf.py  index.rst
docs/_static/: fix_theme_toggle.css
docs/source/: citation.rst  summary.rst
docs/source/modules/: prediction.rst  reactions.rst  utils.rst
docs/source/modules/hidden/: _models.rst
docs/source/tutorials/: predicting_metabolites.rst  python_api.rst  scripts.rst
gloryxr/: __init__.py  _models.py  prediction.py  predictor.py  reaction.py  reactions.py  reactor.py  should_be_in_fame3r.py  som.py  util.py  utils.py
gloryxr/rules_data/: gloryx_reactionrules.csv
