[project]
name = "gloryxr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cdpkit>=1.2.3",
    "fame3r>=1.0.3",
    "rdkit>=2025.3.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.29.4",
    "jupyter>=1.1.1",
    "jupyter-ruff>=0.3.0",
    "pytest>=8.4.1",
    "ruff>=0.11.13",
]
full = [
    "molvs>=0.1.1",
    "pandas>=2.3.0",
    "tqdm>=4.67.1",
    "scikit-learn>=1.7.0",
]

[tool.pyright]
typeCheckingMode = "basic"
