[build-system]
requires = ["hatchling<=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "gloryxr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cdpkit>=1.2.3",
    "fame3r>=1.0.3",
    "rdkit>=2025.3.3",
]

[dependency-groups]
build = ["build"]
tests = [
    "pytest>=8.4.1",
    "syrupy>=4.9.1",
]
docs = [
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-book-theme>=1.1.4",
]
full = [
    "molvs>=0.1.1",
    "pandas>=2.3.0",
    "tqdm>=4.67.1",
    "scikit-learn>=1.7.0",
]
dev = [
    "basedpyright>=1.29.4",
    "jupyter>=1.1.1",
    "jupyter-ruff>=0.3.0",
    "ruff>=0.11.13",
    { include-group = "build" },
    { include-group = "tests" },
    { include-group = "docs" },
    { include-group = "full" },
]

[tool.hatch.build.targets.sdist]
include = ["gloryxr"]

[tool.hatch.build.targets.wheel]
include = ["gloryxr"]

[tool.pyright]
typeCheckingMode = "basic"
